reward 0 trx not count